--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,37 @@
-requirements.txt
+# requirements.txt
+snowflake-connector-python
+openai
+streamlit
+databutton
+
+embedchain
+cohere
+openai-whisper
+
+langchain
+transformers
+tiktoken
+
+faiss-cpu
+chromadb
+pinecone-client
+llama_index
+
+pandas
+scipy
+matplotlib
+plotly
+rich
+scikit-learn
+
+pypdf
+kor
+unstructured
+tabulate
+
+Pillow
+PyPDF2
+
+streamlit-chat
+streamlit-pills
+beautifulsoup4
